<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/AppTitleView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_enter_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_ip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/label_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

    <Button
        android:id="@+id/button_speech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speech" />

</LinearLayout>